[gd_scene load_steps=24 format=3 uid="uid://dtgg2nujcdn1o"]

[ext_resource type="Script" path="res://SampleProject/Scripts/Stage_elements/save_chair.gd" id="1_i4bse"]
[ext_resource type="Texture2D" uid="uid://kke5wk463r12" path="res://assets/sprites/Objects/SaveChair.png" id="1_pssc2"]
[ext_resource type="Shader" path="res://scenes/aura.gdshader" id="2_bu55c"]
[ext_resource type="PackedScene" uid="uid://dp5hxkqh3r2d1" path="res://SampleProject/extra_scenes/HUD/in_game_menu.tscn" id="2_o3lir"]
[ext_resource type="Texture2D" uid="uid://cquk4wbec1myw" path="res://assets/sprites/Objects/SaveChairAura.png" id="3_pahd4"]
[ext_resource type="Script" path="res://SampleProject/Scripts/polyphonic_audio_player.gd" id="5_jw30l"]
[ext_resource type="Script" path="res://SampleProject/Scripts/AudioLibrary.gd" id="6_cpdl0"]
[ext_resource type="Script" path="res://SampleProject/Scripts/soundEffect.gd" id="7_1tx46"]
[ext_resource type="AudioStream" uid="uid://bxt6p8rg1n288" path="res://assets/sounds/PlatformActivate.wav" id="8_haiy0"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_d06tv"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vvx5f"]
width = 64
height = 64
seamless = true
bump_strength = 32.0
noise = SubResource("FastNoiseLite_d06tv")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_id470"]
shader = ExtResource("2_bu55c")
shader_parameter/min_intensity = 0.5
shader_parameter/max_intensity = 1.0
shader_parameter/speed = 2.0
shader_parameter/n = SubResource("NoiseTexture2D_vvx5f")

[sub_resource type="Animation" id="Animation_34wpl"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CPUParticles2D:amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:initial_velocity_max")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [30.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:initial_velocity_min")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1.2, 0.8, 1.5, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CPUParticles2D:one_shot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CPUParticles2D:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CPUParticles2D:lifetime")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CPUParticles2D:explosiveness")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite2D/Aura:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1.2, 0.8, 1.5, 1)]
}

[sub_resource type="Animation" id="Animation_xmur4"]
resource_name = "can_sit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CPUParticles2D:amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [40]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:initial_velocity_max")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [80.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:initial_velocity_min")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [30.0]
}

[sub_resource type="Animation" id="Animation_gb2k8"]
resource_name = "flash"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.5, 0, 1.5, 1), Color(1.5, 0, 1.5, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:one_shot")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [200]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CPUParticles2D:lifetime")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.9]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CPUParticles2D:explosiveness")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CPUParticles2D:initial_velocity_min")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CPUParticles2D:initial_velocity_max")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite2D/Aura:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(2, 2, 2, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_b7qyp"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CPUParticles2D:amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:initial_velocity_max")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [30.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:initial_velocity_min")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tqsdv"]
_data = {
"RESET": SubResource("Animation_34wpl"),
"can_sit": SubResource("Animation_xmur4"),
"flash": SubResource("Animation_gb2k8"),
"idle": SubResource("Animation_b7qyp")
}

[sub_resource type="Gradient" id="Gradient_npgdg"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_8b3jv"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mtshg"]
size = Vector2(35, 135)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wcuoa"]
size = Vector2(2, 135)

[sub_resource type="Resource" id="Resource_d7cj6"]
script = ExtResource("7_1tx46")
Tag = "activate"
stream = ExtResource("8_haiy0")

[sub_resource type="Resource" id="Resource_c053q"]
script = ExtResource("6_cpdl0")
sound_effects = Array[ExtResource("7_1tx46")]([SubResource("Resource_d7cj6")])

[node name="Save Chair" type="RigidBody2D" node_paths=PackedStringArray("animation", "aura", "detect_hitbox", "sound")]
collision_mask = 3
lock_rotation = true
freeze = true
script = ExtResource("1_i4bse")
direction = 1
animation = NodePath("AnimationPlayer")
aura = NodePath("Sprite2D/Aura")
detect_hitbox = NodePath("Area2D")
sound = NodePath("PolyphonicAudio")
save_menu_scene = ExtResource("2_o3lir")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1.2, 0.8, 1.5, 1)
scale = Vector2(2.3, 2.3)
texture = ExtResource("1_pssc2")

[node name="Aura" type="Sprite2D" parent="Sprite2D"]
modulate = Color(0.764631, 0.00293116, 0.999456, 1)
self_modulate = Color(1.2, 0.8, 1.5, 1)
show_behind_parent = true
material = SubResource("ShaderMaterial_id470")
texture = ExtResource("3_pahd4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tqsdv")
}
autoplay = "idle"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 20
preprocess = 1.0
randomness = 0.5
lifetime_randomness = 0.5
emission_shape = 3
emission_rect_extents = Vector2(30, 60)
direction = Vector2(0, -1)
spread = 14.5
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
scale_amount_max = 2.0
color = Color(0.678431, 0, 1, 1)
color_ramp = SubResource("Gradient_npgdg")
color_initial_ramp = SubResource("Gradient_8b3jv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-11.5, 1.5)
shape = SubResource("RectangleShape2D_mtshg")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(6, 3)
shape = SubResource("RectangleShape2D_wcuoa")

[node name="PolyphonicAudio" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("5_jw30l")
audio_library = SubResource("Resource_c053q")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
